# FairEval-Suite

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.rai-service  LICENSE  MANIFEST.in  README.md  SCOPE.md  benchmark.py  benchmark_results.csv  pyproject.toml  requirements.txt  setup.cfg
agent_eval/: release_decision_report.md  retrieval_quality_eval.py  retrieval_quality_results.json  tool_call_correctness.json  unsupported_action_detection.py  unsupported_action_results.json
agent_eval_packs/: agent_eval_scenarios.json
analysis/: embedding_distance_examples.md  token_distribution_report.json  token_distribution_report.py
api/: app.py  main.py  main.py.bak
artifacts/: artifact_index.sqlite  trace_metadata.jsonl
batch_eval/: batch_eval_results.json  distributed_eval_summary.md  spark_eval_pipeline.py
benchmark_public/: benchmark_card.md
case_studies/: case_01_instruction_drop.md  case_02_schema_break.md  case_03_variance_regression.md
ci_eval_gate/: baseline_outputs.json  candidate_outputs.json  regression_gate.py  regression_gate_report.json
compare/: 20260307T230721.285049Z_rag_basic_mock_7ed6ae0c4224_vs_20260307T230721.220644Z_rag_basic_mock_7ed6ae0c4224.json  20260318T174650.470189Z_rag_basic_mock_7ed6ae0c4224_vs_20260318T174643.278545Z_rag_basic_mock_7ed6ae0c4224.json
dashboard/: benchmark_explorer.html  faireval_flagship_dashboard.html  index.html  queued_vs_completed.json
dashboard_exports/: compares.csv  dashboard_spec.json  gates.csv  pack_runs.csv  runs.csv
dashboard_frontend/: package-lock.json  package.json
(+400 files in other folders)
