[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "faireval-suite"
version = "0.2.0"
description = "Release-grade AI evaluation, regression gating, artifact indexing, and decision-support toolkit."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.9.0",
  "rich>=13.0.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "pandas>=2.2.0",
  "scipy>=1.11.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["evals*"]
